crates/oxc_react_compiler/tests/snapshots/error.invalid-derived-computation-in-effect-single-dependency.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.invalid-derived-computation-in-effect-single-dependency.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "Values derived from props and state should be calculated during render, not in an effect", labels: [LabeledSpan { label: Some("This state update stores a value that can be calculated during render"), span: Span { start: 193, end: 206 }, primary: true }, LabeledSpan { label: Some("This reactive value contributes to the derived state"), span: Span { start: 228, end: 233 }, primary: false }], help: Some("This effect derives state from the reactive value `value`, causing an extra render and potentially showing a stale value. Calculate the derived value during render, then remove the redundant state and effect."), note: Some("React Compiler skipped optimizing this component or hook"), severity: Error, code: OxcCode { scope: Some("react-compiler"), number: Some("EffectDerivationsOfState") }, url: Some("https://react.dev/reference/eslint-plugin-react-hooks/lints/set-state-in-effect") } }

No changes.
