crates/oxc_react_compiler/tests/snapshots/error.invalid-extra-memo-dependency-validation-enabled.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.invalid-extra-memo-dependency-validation-enabled.tsx
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "MemoDependencies: Found extra memoization dependencies", labels: [LabeledSpan { label: Some("Unnecessary dependency `tick`"), span: Span { start: 252, end: 256 }, primary: false }], help: Some("Extra dependencies can cause a value to update more often than it should, resulting in performance problems such as excessive renders or effects firing too often"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

// @compilationMode:"infer" @panicThreshold:"none" @validateExhaustiveMemoizationDependencies
import { useMemo } from "react";
export function Component({ status, tick }) {
	const value = useMemo(() => {
		void tick;
		return status.expiresAt;
	}, [tick, status.expiresAt]);
	return <div>{value}</div>;
}
