crates/oxc_react_compiler/tests/snapshots/error.invalid-function-expression-mutates-immutable-value.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.invalid-function-expression-mutates-immutable-value.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Immutability: This value cannot be modified", labels: [LabeledSpan { label: Some("`x` cannot be modified"), span: Span { start: 165, end: 166 }, primary: false }], help: Some("Modifying a value returned from 'useState()', which should not be modified directly. Use the setter function to update instead"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
